fixed overflow issues when scrolling

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -49,11 +49,15 @@ a {
 
 .button--home {
     font-size: 5em;
-    float: left;
+    position: absolute;
+    top: 10px;
+    left: 10px;
 }
 
 .button--syntax {
-    float: right;
+    position: absolute;
+    top: 10px;
+    right: 10px;
     font-size: 2em;
     margin: 10px 15px;
 }
@@ -63,6 +67,7 @@ a {
     overflow-y: scroll;
     min-height: 100%;
     height: 100vh;
+    overflow-x: hidden;
 
     .overlay {
         background-image: url(images/overlay-left.png);
@@ -271,7 +276,7 @@ a {
         background-position: center center;
         background-repeat: no-repeat;
         position: absolute;
-        bottom: 0px;
+        bottom: 20px;
         right: 20px;
         height: 200px;
         width: 200px;
@@ -297,7 +302,6 @@ a {
 }
 
 .footer {
-    width: 100%;
 
     p {
         color: $white--faded;
